Version 9.1 - xxx edition. 21 August 2020

Added compile setting to disable networking functions
Added pc speaker audio driver (for Linux only)
Added date & time field info to ZSF snapshots
Added F-key function to show windows in background without having to open the menu

Improved ZX Desktop: 
-Added direct buttons, to access menu items
-Added devices buttons/icons, to show device activity and device configuration
-Reordered menu items
-Windows are not closed when changing ZX Desktop size
-Added new ZX Desktop fill types: Chess, Grid, Random
-Improved input number windows: added buttons to increase/decrease values

Improved loading .pok files: increased maximum pokes from 100 to 49152 pokes
Improved 1 bit resample audio filter 

Fixed reading keys on SDL and X11 drivers with default keymap and machines QL, MSX and Spectravideo

Fixed QL bugs:
-Fixed loading QL Superbasic programs when line lenght usually longer than 128 bytes
-Fixed using QL system calls and A6 pointer offset used after previous Trap was not 4
-Fixed system call FS.HEADR
-Fixed system call IO.FSTRG
-Fixed possible hang calling IO.SSTRG

Fixed segfaults when changing machines and having ZX Desktop windows opened
Fixed easter egg anc cyrillic characters
Fixed segfaults when initializing audio and video drivers
Fixed rendering ZX Desktop on startup
Fixed arranging ZX Vision windows when changing machine or disabling border


Version 9.0 - Turbo Esprit edition. 17 August 2020

Added new emulated machines: 
-MSX1 
-Spectravideo 318/328
-Colecovision 
-Sega SG-1000

Added new compiled version: FreeBSD
Added support for compilation on Haiku
Added emulation of AY chip MIDI registers 14 & 15 and route them to an external MIDI device
Added browser for quicksave snapshots
Added save screen to bmp feature
Added menu to download ZEsarUX extras
Added Windows icon
Added F key to toggle top cpu speed
Added F key to pause/unpause tape
Added setting to rotate output tape when selecting tape that already exists