@@ -3505,6 +3505,9 @@ int util_write_configfile(void)
 
   if (recreated_zx_keyboard_support.v)	      ADD_STRING_CONFIG,"--recreatedzx");
 
+
+                                                ADD_STRING_CONFIG,"--keymap %d",z88_cpc_keymap_type);
+
   if (autoload_snapshot_on_start.v)           ADD_STRING_CONFIG,"--autoloadsnap");
   if (autosave_snapshot_on_exit.v)            ADD_STRING_CONFIG,"--autosavesnap");
   if (autosave_snapshot_path_buffer[0]!=0) {
